dev: fix issues with details and heading spacing

--- a/app/assets/sass/patterns/_flashcard.scss
+++ b/app/assets/sass/patterns/_flashcard.scss
@@ -25,8 +25,7 @@
   }
 
   h2 {
-    margin: 0.7em 0px 0.3em 0px;
-
+    margin: 0.7em 0px 0.3em 0px !important;
   }
 
   a {
